[package]
name = "ux-css"
version = "0.0.0"
authors = ["Victor Dudochkin <dudochkin.victor@gmail.com>"]
readme = "README.md"
homepage = "https://angular-rust.github.io/ux-css"
repository = "https://github.com/angular-rust/ux-css"
documentation = "https://docs.rs/ux-css"
description = "Css processing library"
keywords = ["wasm", "web", "webassembly", "cairo"]
categories = ["wasm", "web-programming", "gui"]
edition = "2018"
license = "MPL-2.0"

[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "css"