[package]
name = "ux-css"
version = "0.0.0"
authors = ["Victor Dudochkin <dudochkin.victor@gmail.com>"]
readme = "README.md"
homepage = "https://angular-rust.github.io/ux-css"
repository = "https://github.com/angular-rust/ux-css"
documentation = "https://docs.rs/ux-css"
description = "Css processing library"
keywords = ["wasm", "web", "webassembly", "cairo"]
categories = ["wasm", "web-programming", "gui"]
edition = "2018"
license = "MPL-2.0"

[badges]
maintenance = { status = "actively-developed" }

# [[bin]]
# name = "rsass"
# doc = false
# required-features = ["commandline"]

# [[bin]]
# name = "spectest"
# path = "src/spectest/main.rs"
# doc = false
# required-features = ["spectest"]

[lib]
name = "css"

[features]
commandline = ["structopt"]
spectest = ["yaml-rust", "deunicode", "hrx-get", "regex"]

[dependencies]
log = "0.4.8"

# sass-engine dependencies
lazy_static = "1.0"
nom = { version = "6.0", default-features = false }
nom_locate = "3.0"
num-bigint = { version = "0.4.0", default-features = false, features = ["std"] }
num-integer = "0.1.42"
num-rational = { version = "0.4.0", default-features = false }
num-traits = "^0.2.0"
rand = "0.8.0"
structopt = { version = "0.3.9", features = ["wrap_help"], optional = true }
deunicode = { version = "1.0", optional = true }
hrx-get = { version = "0.1", optional = true }
regex = { version = "1.1.0", optional = true }
yaml-rust = { version = "0.4", optional = true }

[dev-dependencies]
# css-engine dependencies
env_logger = { version = "0.6", default-features = false }
roxmltree = "0.7"
